--- a/src/main/resources/defaults/themes/Default/ranks.yml
+++ b/src/main/resources/defaults/themes/Default/ranks.yml
@@ -1,8 +1,15 @@
-Ranks:
-  Probation: <pp>[&fMember<sp>(<failure>P<sp>)<pp>]<reset> <reset>
-  Bot: <pp>[&f%rank%<pp>]<reset> <reset>
-  Member: <pp>[&f%rank%<pp>]<reset> <reset>
-  Moderator: <pp>[&f%rank%<pp>]<reset> <reset>
-  Developer: <pp>[&f%rank%<pp>]<reset> <reset>
-  Administrator: <pp>[&f%rank%<pp>]<reset> <reset>
-  Owner: <pp>[&4%rank%<pp>]<reset> <reset>
+Probation: '&4&lP&r &7'
+Bot: '&7&lBot&r &7'
+Member: '&7'
+Donor_1: '&7&lGladiator&r &f'
+Donor_2: '&6&lChampion&r &f'
+Donor_3: '&3&lLegend&r &f'
+Donor_4: '&b&lMythic&r &f'
+Donor_5: '&a&lEternal&r &f'
+Map_Maker: '&d&lMap Maker&r &f'
+VIP: '&5&lVIP&r &f'
+Moderator: '&c&lMod&r &f'
+Senior_Moderator: '&4&lSenior Mod&r &f'
+Developer: '&4&lDeveloper&r &f'
+Administrator: '&4&lAdmin&r &f'
+Owner: '&4&lOwner&r &f'
