Small fixes, mainly config stuff.

--- a/src/main/resources/assets/themes/ranks.yml
+++ b/src/main/resources/assets/themes/ranks.yml
@@ -1,8 +1,15 @@
-Ranks:
-  Owner: '&8[&f%rank%&f&8]&r &f'
-  Administrator: '&8[&f%rank%&8]&r &f'
-  Developer: '&8[&f%rank%&8]&r &f'
-  Moderator: '&8[&f%rank%&8]&r &f'
-  Bot: '&8[&f%rank%&f '
-  Probation: '&8[&f%rank%&8]&r &f'
-  Member: '&8[&f%rank%&8]&r &f'
+Probation: '&4&lP&r &7'
+Bot: '&7&lBot&r &7'
+Member: '&7'
+Donor_1: '&7&lGladiator&r &f'
+Donor_2: '&6&lChampion&r &f'
+Donor_3: '&3&lLegend&r &f'
+Donor_4: '&b&lMythic&r &f'
+Donor_5: '&a&lEternal&r &f'
+Map_Maker: '&d&lMap Maker&r &f'
+VIP: '&5&lVIP&r &f'
+Moderator: '&c&lMod&r &f'
+Senior_Moderator: '&4&lSenior Mod&r &f'
+Developer: '&4&lDeveloper&r &f'
+Administrator: '&4&lAdmin&r &f'
+Owner: '&4&lOwner&r &f'
