--- a/src/main/resources/defaults/themes/config.yml
+++ b/src/main/resources/defaults/themes/config.yml
@@ -5,7 +5,7 @@
 default: 'Default'
 
 # Enable/Disable theme selection.
-# The theme in the "Default" setting will always be used regardless of this setting.
+# The theme in the "default" setting will always be used regardless of this setting.
 theme-selection-enabled: true
 
 # This is unicode you can use in themes, with enclosed bracketing. []
